# mri-inference-stack

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: quality.yml
ansible/: README.md  site.yml
data/: __init__.py  dataset.py
docs/: README.md  architecture_diagrams.md  cern_tsc_alignment.md  dataset.md  innovation.md  reproducibility_runbook.md  research_extensions.md  system-design.md
evaluation/: detection_eval.py  metrics.py
k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
models/: classifier.py  detection.py  gan.py  segmentation.py
outputs/: README.md
scripts/: preflight.py
tests/: README.md  test_metrics.py
training/: __init__.py  callbacks.py
weights/: README.md  classifier_model.keras  detection_inference_config.json  detection_model.keras  discriminator_conditional.keras  generator_conditional.keras  segmentation_model.keras
