[project]
name = "mri-inference-stack"
version = "0.1.0"
description = "End-to-end brain MRI screening, classification, and image synthesis pipeline with containerized infrastructure."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.26,<3.0",
    "tensorflow>=2.15,<2.22",
    "streamlit>=1.35,<2.0",
    "pillow>=10.0",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
    "kaggle>=1.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
  "data/raw",
  "data/processed",
  "checkpoints",
  "logs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py"]
testpaths = ["tests"]
